--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "jshint": "jshint public/js/*.js",
     "stylelint": "stylelint ./public/styles/*.css",
-    "pylint": "pylint *.py",
-    "update": "python entertainment_center.py",
+    "pylint": "pylint **/*.py",
+    "update": "python src/entertainment_center.py",
     "start": "cd public; python -m SimpleHTTPServer 8000",
     "codecept": "codeceptjs run --steps",
     "selenium": "./seleniumInit.js",
