--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "Laurie Reynolds",
   "license": "MIT",
   "devDependencies": {
+    "async": "2.1.4",
     "babel-register": "6.18.0",
+    "chai": "3.5.0",
     "child_process": "1.0.2",
     "codeceptjs": "0.4.13",
     "jshint": "2.9.4",
